experiments_suites/edutelling-develop/01-database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edutelling-develop
  name: edutelling-orientdb
  labels:
    app: edutelling-orientdb
spec:
  template:
    metadata:
      namespace: edutelling-develop
      name: edutelling-orientdb
      labels:
        app: edutelling-orientdb
    spec:
      containers:
        - name: edutelling-orientdb
          image: orientdb:3.0.22
          imagePullPolicy: Always
          volumeMounts:
            - name: data-edutelling-orientdb-databases
              mountPath: /orientdb/databases
      volumes:
        - name: data-edutelling-orientdb-databases
          persistentVolumeClaim:
            claimName: volume-edutelling-orientdb-databases
      restartPolicy: Always
  selector:
    matchLabels:
      app: edutelling-orientdb
---
apiVersion: v1
kind: Service
metadata:
  namespace: edutelling-develop
  name: edutelling-orientdb
spec:
  selector:
    app: edutelling-orientdb
  ports:
    - port: 2424
  type: ClusterIP
