experiments_suites/edutelling-develop/02-edutelling-api.yml
apiVersion: v1
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edutelling-develop
  name: edutelling-api
  labels:
    app: edutelling-api
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
  annotations:
    keel.sh/pollSchedule: '@every 10m'
spec:
  replicas: 1
  template:
    metadata:
      name: edutelling-api
      labels:
        app: edutelling-api
    spec:
      imagePullSecrets:
        - name: registry-gitlab-edutelling-api
      containers:
        - name: edutelling-api
          image: registry.gitlab.com/anoki-srl/edutelling-prj/edutelling-api:develop
          imagePullPolicy: Always
          volumeMounts:
            - name: data-edutelling-files
              mountPath: /usr/src/app/uploads
      volumes:
        - name: data-edutelling-files
          persistentVolumeClaim:
            claimName: volume-edutelling-files
      restartPolicy: Always
  selector:
    matchLabels:
      app: edutelling-api
---
apiVersion: v1
kind: Service
metadata:
  namespace: edutelling-develop
  name: edutelling-api
spec:
  selector:
    app: edutelling-api
  ports:
    - port: 3000
  type: ClusterIP
