experiments_suites/edutelling-develop/03-edutelling-app.yml
apiVersion: v1
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edutelling-develop
  name: edutelling-app
  labels:
    app: edutelling-app
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
  annotations:
    keel.sh/pollSchedule: '@every 10m'
spec:
  replicas: 1
  template:
    metadata:
      name: edutelling-app
      labels:
        app: edutelling-app
    spec:
      imagePullSecrets:
        - name: registry-gitlab-edutelling-app
      containers:
        - name: edutelling-app
          image: registry.gitlab.com/anoki-srl/edutelling-prj/edutelling:develop
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: edutelling-app
---
apiVersion: v1
kind: Service
metadata:
  namespace: edutelling-develop
  name: edutelling-app
spec:
  selector:
    app: edutelling-app
  ports:
    - port: 80
  type: ClusterIP
