experiments_suites/edutelling-develop/06-memcached.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edutelling-develop
  name: edutelling-memcached
  labels:
    app: edutelling-memcached
spec:
  template:
    metadata:
      namespace: edutelling-develop
      name: edutelling-memcached
      labels:
        app: edutelling-memcached
    spec:
      containers:
        - name: edutelling-memcached
          image: memcached:1.6.6-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: data-edutelling-memcached-databases
              mountPath: /memcached/databases
      volumes:
        - name: data-edutelling-memcached-databases
          persistentVolumeClaim:
            claimName: volume-edutelling-memcached-databases
      restartPolicy: Always
  selector:
    matchLabels:
      app: edutelling-memcached
---
apiVersion: v1
kind: Service
metadata:
  namespace: edutelling-develop
  name: edutelling-memcached
spec:
  selector:
    app: edutelling-memcached
  ports:
    - port: 11211
  type: ClusterIP
