experiments_suites/edutelling-develop/05-ingress-edutelling-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: edutelling-develop
  name: ingress-edutelling-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
spec:
  rules:
    - host: edutelling-app-develop.openshift.techgap.it
      http:
        paths:
          - path: /
            backend:
              serviceName: edutelling-app
              servicePort: 80
  tls:
    - hosts:
        - edutelling-app-develop.openshift.techgap.it
      secretName: tls-edutelling-app
